--- a/iChef/Base.lproj/Main.storyboard
+++ b/iChef/Base.lproj/Main.storyboard
@@ -20,12 +20,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5xz-B3-6EF">
-                                            <rect key="frame" x="84" y="0.0" width="42" height="32"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HYr-cd-ccj">
                                             <rect key="frame" x="2" y="1" width="74" height="42"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -33,8 +27,6 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="receptSlana" destination="5xz-B3-6EF" id="yFJ-h0-yeN"/>
-                                    <outlet property="receptiSlana" destination="5xz-B3-6EF" id="I0v-Lj-ayN"/>
                                     <outlet property="slaneSlike" destination="HYr-cd-ccj" id="BjZ-Ai-4Wl"/>
                                 </connections>
                             </tableViewCell>
@@ -61,6 +53,7 @@
         <scene sceneID="g0b-Kv-40x">
             <objects>
                 <navigationController definesPresentationContext="YES" id="Rao-VM-ppH" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="c6V-Tx-ZOX"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="UQY-R8-6X6">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -84,29 +77,52 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IHE-mM-xHo">
-                                <rect key="frame" x="12" y="100" width="77" height="69"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hSx-1M-C5m">
-                                <rect key="frame" x="8" y="47" width="78" height="55"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="qlD-Fg-FjG">
+                                <rect key="frame" x="0.0" y="66" width="320" height="366"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="slanaCelijaPrvi" id="FmX-Uq-ZIw">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FmX-Uq-ZIw" id="N5K-3Z-IBO">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PIS-dN-c36">
+                                                    <rect key="frame" x="268" y="7" width="32" height="30"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="i">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="infoClicked:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="mWl-sf-AEc"/>
+                                                        <action selector="informationClicked:" destination="FmX-Uq-ZIw" eventType="touchUpInside" id="Pf8-fR-mcy"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <segue destination="Rao-VM-ppH" kind="modal" id="zhl-W8-Cb1"/>
+                                    <outlet property="dataSource" destination="CZ4-MO-1fc" id="NSh-To-GbW"/>
+                                    <outlet property="delegate" destination="CZ4-MO-1fc" id="tt7-N4-E2J"/>
                                 </connections>
-                            </button>
+                            </tableView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Slana jela" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpt-jp-HP9">
+                                <rect key="frame" x="116" y="20" width="88" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Slana jela" image="first" id="u1e-5L-l1D"/>
                     <connections>
-                        <segue destination="Rao-VM-ppH" kind="modal" identifier="slanaVeza" id="jqn-um-1OS"/>
+                        <outlet property="slanaKategorije" destination="qlD-Fg-FjG" id="4gy-vp-3cz"/>
+                        <segue destination="Rao-VM-ppH" kind="push" identifier="slanaVeza" id="1Ca-wq-F9g"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qh2-T1-AhA" sceneMemberID="firstResponder"/>
@@ -174,7 +190,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="vDa-m3-lk0" kind="modal" id="wKi-xW-Iff"/>
+                                    <segue destination="vDa-m3-lk0" kind="modal" id="rCI-DG-NKC"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -182,7 +198,7 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Slatka jela" image="second" id="Z7h-1E-pvt"/>
                     <connections>
-                        <segue destination="vDa-m3-lk0" kind="modal" id="Qoa-4b-P6r"/>
+                        <segue destination="vDa-m3-lk0" kind="modal" identifier="slatkaVeza" id="Qoa-4b-P6r"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3qq-4t-Ow8" sceneMemberID="firstResponder"/>
@@ -273,8 +289,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="2cF-TT-fBf"/>
-        <segue reference="wKi-xW-Iff"/>
-        <segue reference="zhl-W8-Cb1"/>
+        <segue reference="3aW-0D-HUJ"/>
+        <segue reference="rCI-DG-NKC"/>
     </inferredMetricsTieBreakers>
 </document>
