--- a/iChef/Base.lproj/Main.storyboard
+++ b/iChef/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="receptiTable" id="Dit-48-4VV" customClass="ReceptiTableViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="receptPrvi" id="Dit-48-4VV" customClass="ReceptiTableViewCell">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dit-48-4VV" id="wdw-b8-KNL">
@@ -40,30 +40,14 @@
                     <navigationItem key="navigationItem" title="Slana jela" id="FXp-A6-fX1">
                         <barButtonItem key="leftBarButtonItem" title="Nazad" id="BW5-s1-B2S">
                             <connections>
-                                <segue destination="8YX-ce-x5E" kind="modal" id="3aW-0D-HUJ"/>
+                                <segue destination="8YX-ce-x5E" kind="modal" id="rSS-7M-5cS"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="26b-j1-QUk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1195" y="-726"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="g0b-Kv-40x">
-            <objects>
-                <navigationController definesPresentationContext="YES" id="Rao-VM-ppH" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="c6V-Tx-ZOX"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UQY-R8-6X6">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="5gt-Km-gCs" kind="relationship" relationship="rootViewController" id="clJ-3X-hMC"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1Eq-5A-eOP" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="661" y="-727"/>
+            <point key="canvasLocation" x="1577" y="-154"/>
         </scene>
         <!--First View Controller - First-->
         <scene sceneID="W3I-pn-N6e">
@@ -78,29 +62,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="qlD-Fg-FjG">
-                                <rect key="frame" x="0.0" y="66" width="320" height="366"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="442"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="slanaCelijaPrvi" id="FmX-Uq-ZIw">
-                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="slanaCelijaPrvi" id="FmX-Uq-ZIw" customClass="slanaKategorijaCell">
+                                        <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FmX-Uq-ZIw" id="N5K-3Z-IBO">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PIS-dN-c36">
-                                                    <rect key="frame" x="268" y="7" width="32" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" title="i">
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                    <connections>
-                                                        <action selector="infoClicked:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="mWl-sf-AEc"/>
-                                                    </connections>
-                                                </button>
-                                            </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="5gt-Km-gCs" kind="push" identifier="slanaVeza" id="oEh-7T-PMm"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -118,15 +93,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Slana jela" image="first" id="u1e-5L-l1D"/>
+                    <navigationItem key="navigationItem" id="21j-GZ-mc2"/>
                     <connections>
-                        <outlet property="slanaKategorije" destination="qlD-Fg-FjG" id="4gy-vp-3cz"/>
-                        <segue destination="Rao-VM-ppH" kind="push" identifier="slanaVeza" id="1Ca-wq-F9g"/>
+                        <outlet property="slanaKategorije" destination="qlD-Fg-FjG" id="G2f-NT-aEK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qh2-T1-AhA" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1179" y="-138"/>
+            <point key="canvasLocation" x="1151" y="-154"/>
         </scene>
         <!--View Controller - Sta kuhati?-->
         <scene sceneID="7SL-4O-va5">
@@ -267,7 +241,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="CZ4-MO-1fc" kind="relationship" relationship="viewControllers" id="SUk-Ux-ee1"/>
+                        <segue destination="5ez-qX-rmy" kind="relationship" relationship="viewControllers" id="SUk-Ux-ee1"/>
                         <segue destination="QUy-BD-bpt" kind="relationship" relationship="viewControllers" id="M8t-EP-wfW"/>
                         <segue destination="Hyj-vG-13e" kind="relationship" relationship="viewControllers" id="U9c-O1-y1d"/>
                     </connections>
@@ -275,6 +249,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNP-y4-bzi" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="132" y="180"/>
+        </scene>
+        <!--Navigation Controller - Slana jela-->
+        <scene sceneID="CJm-KJ-Ls2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5ez-qX-rmy" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Slana jela" image="first" id="u1e-5L-l1D"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="iZN-bO-JJV"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Yh9-no-0aw">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="CZ4-MO-1fc" kind="relationship" relationship="rootViewController" id="7Ai-qs-yFV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6gY-nI-Bro" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="673" y="-154"/>
         </scene>
     </scenes>
     <resources>
@@ -288,7 +282,7 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="3aW-0D-HUJ"/>
         <segue reference="rCI-DG-NKC"/>
+        <segue reference="rSS-7M-5cS"/>
     </inferredMetricsTieBreakers>
 </document>
