--- a/iChef/Base.lproj/Main.storyboard
+++ b/iChef/Base.lproj/Main.storyboard
@@ -140,67 +140,6 @@
             </objects>
             <point key="canvasLocation" x="1151" y="-154"/>
         </scene>
-        <!--Pretraga-->
-        <scene sceneID="7SL-4O-va5">
-            <objects>
-                <viewController id="Hyj-vG-13e" customClass="pretraga" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="R4Q-be-GZS"/>
-                        <viewControllerLayoutGuide type="bottom" id="XD6-wv-urd"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="m4e-tx-YHc">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="center" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Kvi-kE-0cL">
-                                <rect key="frame" x="0.0" y="116" width="320" height="319"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="Hyj-vG-13e" id="Uhk-6h-apm"/>
-                                    <outlet property="delegate" destination="Hyj-vG-13e" id="oy2-aX-dvw"/>
-                                </connections>
-                            </tableView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rgm-dn-6du">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sYo-CM-uv5">
-                                <rect key="frame" x="0.0" y="67" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="Hyj-vG-13e" id="zkx-Y7-c85"/>
-                                </connections>
-                            </searchBar>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="MX7-QA-adG"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="pretragaTabela" destination="Kvi-kE-0cL" id="D1b-fS-HXl"/>
-                        <outlet property="searchDisplayController" destination="7ao-kW-0pf" id="UBe-OL-Hob"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6lI-Q2-6I7" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <searchDisplayController id="c4I-nO-j34"/>
-                <searchDisplayController id="Xxb-vA-d7I"/>
-                <searchDisplayController id="eke-h6-7yK">
-                    <connections>
-                        <outlet property="searchBar" destination="rgm-dn-6du" id="6KQ-at-4Wm"/>
-                    </connections>
-                </searchDisplayController>
-                <searchDisplayController id="7ao-kW-0pf">
-                    <connections>
-                        <outlet property="delegate" destination="Hyj-vG-13e" id="0tt-I1-FOX"/>
-                        <outlet property="searchBar" destination="sYo-CM-uv5" id="I6C-4j-ecd"/>
-                    </connections>
-                </searchDisplayController>
-            </objects>
-            <point key="canvasLocation" x="2941" y="-46"/>
-        </scene>
         <!--Second View Controller - Second-->
         <scene sceneID="ot8-2e-RuS">
             <objects>
@@ -343,7 +282,7 @@
                     <connections>
                         <segue destination="5ez-qX-rmy" kind="relationship" relationship="viewControllers" id="SUk-Ux-ee1"/>
                         <segue destination="zMj-vh-YcH" kind="relationship" relationship="viewControllers" id="M8t-EP-wfW"/>
-                        <segue destination="g03-MZ-N69" kind="relationship" relationship="viewControllers" id="LDz-A7-lyQ"/>
+                        <segue destination="wRp-Vf-dis" kind="relationship" relationship="viewControllers" id="Dot-CL-H0W"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNP-y4-bzi" sceneMemberID="firstResponder"/>
@@ -389,24 +328,93 @@
             </objects>
             <point key="canvasLocation" x="687" y="546"/>
         </scene>
-        <!--Navigation Controller - Item-->
-        <scene sceneID="ryw-wr-0K9">
+        <!--Pretraga-->
+        <scene sceneID="RmC-VE-0JM">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3Yz-nz-3Qu" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="g03-MZ-N69" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="VIR-On-zFx"/>
+                <viewController id="4N9-gw-Sy2" customClass="pretraga" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3lu-ft-e1e"/>
+                        <viewControllerLayoutGuide type="bottom" id="V2B-I9-7L8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5H5-LJ-jC8">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NPK-Z0-A1O">
+                                <rect key="frame" x="1" y="23" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="4N9-gw-Sy2" id="oPY-rc-BlK"/>
+                                </connections>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="M9j-hI-Zgt">
+                                <rect key="frame" x="1" y="67" width="320" height="413"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="separatorColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="sectionIndexTrackingBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="celijaPretraga" id="LAX-lo-FkP" customClass="pretragaCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LAX-lo-FkP" id="6NR-wk-J1j">
+                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <segue destination="thI-VS-hjF" kind="push" identifier="pretragaRezultat" id="GEE-H6-2NL"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="4N9-gw-Sy2" id="nnk-3l-4h2"/>
+                                    <outlet property="delegate" destination="4N9-gw-Sy2" id="7A1-5A-d1N"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="CvO-Uf-iOf"/>
+                    <connections>
+                        <outlet property="pretragaTabela" destination="M9j-hI-Zgt" id="Dxh-Rc-dj4"/>
+                        <outlet property="searchDisplayController" destination="641-de-OGX" id="QnR-7W-we7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J97-LV-mFf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="641-de-OGX">
+                    <connections>
+                        <outlet property="delegate" destination="4N9-gw-Sy2" id="cfO-1S-dD4"/>
+                        <outlet property="searchBar" destination="NPK-Z0-A1O" id="VmV-0a-YSw"/>
+                        <outlet property="searchContentsController" destination="4N9-gw-Sy2" id="K40-xj-vtU"/>
+                        <outlet property="searchResultsDataSource" destination="4N9-gw-Sy2" id="wy7-6z-pIQ"/>
+                        <outlet property="searchResultsDelegate" destination="4N9-gw-Sy2" id="XoA-dH-efB"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="2967" y="262"/>
+        </scene>
+        <!--Navigation Controller - Item-->
+        <scene sceneID="Ows-QE-qSS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wRp-Vf-dis" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="DdY-mC-bZJ"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="R2x-Sd-Wlt">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DTu-uY-l83">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Hyj-vG-13e" kind="relationship" relationship="rootViewController" id="y3j-sp-5Xm"/>
+                        <segue destination="4N9-gw-Sy2" kind="relationship" relationship="rootViewController" id="c1Q-vw-H7R"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="R8y-3w-BmM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2487" y="168"/>
+            <point key="canvasLocation" x="2493" y="262"/>
         </scene>
     </scenes>
     <resources>
@@ -421,5 +429,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="B5O-Gt-lJF"/>
+        <segue reference="GEE-H6-2NL"/>
     </inferredMetricsTieBreakers>
 </document>
